--- a/style.css
+++ b/style.css
@@ -1,83 +1,185 @@
+     .toolbar {
+            border: 1px solid gray;
+            border-radius: 4px;
 
-.toolbar {
-    border: 1px solid lightgray;
-    background-color: lightgray;
-    display: flex;
-    width: 80vw;
-    margin: auto;
-    height: 82px;
-    justify-content: space-evenly;
-    align-items: center;
-}
+            width: 90vw;
+            /* trick element center */
+            margin: 0 auto;
+            /* the children should have
+             space for alignment */
+            height: 80px;
 
-.tool {
-    height: 50px;
-}
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
 
-.tool-img {
-    height: 50px;
-}
+        }
+        .tool-img {
+            /* img ko change to usko height */
+            height: 50px;
+        }
 
-.color-container {
-    display: flex;
-    height: 50px;
-    width: 150px;
-    justify-content: space-evenly;
-    align-items: center;
+        .color-container {
+            border: 1px solid gray;
+            border-radius: 3px;
+            height: 50px;
+            width: 150px;
 
-}
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+        }
 
-.color {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%
-}
+        .color {
+            height: 40px;
+            width: 40px;
+            border-radius: 50%;
+        }
 
-.red {
-    background-color: red;
+        .red {
+            background-color:
+            red;
+        }
 
-}
+        .blue {
+            background-color:
+            blue;
+        }
 
-.green {
-    background-color: green;
+        .green {
+            background-color:
+            green;
+        }
 
-}
+        /* tool options */
+        .size-box {
+            width: 150px;
+            height: 30px;
+            border: 1px solid gray;
+            align-items: center;
+            justify-content: space-evenly;
+            /* display: flex; */
+            display: none;
+        }
 
-.blue {
-    background-color: blue;
-}
+        .size {
+            background-color: lightsteelblue;
+            border-radius: 50%;
+        }
 
-.size-box {
-    width: 150px;
-    height: 30px;
-    border: 1px solid gray;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    display: none;
-}
+        .size1 {
+            height: 10px;
+            width: 10px;
+        }
 
-.size {
-    background-color: lightsteelblue;
-    border-radius: 50%;
-}
+        .size2 {
+            height: 14px;
+            width: 14px;
+        }
 
-.size1 {
-    height: 10px;
-    width: 10px;
-}
+        .size3 {
+            height: 18px;
+            width: 18px;
+        }
 
-.size2 {
-    height: 14px;
-    width: 14px;
-}
+        .size4 {
+            height: 22px;
+            width: 22px;
+        }
 
-.size3 {
-    height: 18px;
-    width: 18px;
-}
 
-.size4 {
-    height: 22px;
-    width: 22px;
-}
+        /* icons  */
+        .fas {
+            font-size: 2rem;
+            
+        }
+
+
+        /* sticky notes */
+
+        /* div -> parent width  */
+    .navbar {
+        display: flex;
+        height: 24px;
+        justify-content: flex-end;
+        align-items: center;
+        background-color: transparent;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+
+    .close {
+        height: 15px;
+        width: 15px;
+        background-color: lightcoral;
+        border-radius: 50%;
+        margin-right: 5px;
+        ;
+    }
+
+    .minimize {
+        height: 15px;
+        width: 15px;
+        background-color: lightgreen;
+        border-radius: 50%;
+        margin-right: 5px;
+        ;
+    }
+
+    .sticky {
+        width: 175px;
+        height: 175px;
+    }
+
+    .textarea {
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        height: 145px;
+        width: 170px;
+        outline: none;
+        border: none;
+        border-top: 2px solid gray
+    }
+
+
+       /* sticky notes */
+
+        /* div -> parent width  */
+        .navbar {
+            display: flex;
+            height: 24px;
+            justify-content: flex-end;
+            align-items: center;
+            background-color: transparent;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        }
+    
+        .close {
+            height: 15px;
+            width: 15px;
+            background-color: lightcoral;
+            border-radius: 50%;
+            margin-right: 5px;
+            ;
+        }
+    
+        .minimize {
+            height: 15px;
+            width: 15px;
+            background-color: lightgreen;
+            border-radius: 50%;
+            margin-right: 5px;
+            ;
+        }
+    
+        .sticky {
+            width: 175px;
+            height: 175px;
+        }
+    
+        .textarea {
+            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+            height: 145px;
+            width: 170px;
+            outline: none;
+            border: none;
+            border-top: 2px solid gray
+        }
